--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -5,37 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:theme="@style/AppBar">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/appbar_toolbar"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:focusableInTouchMode="true"
-        app:contentInsetStart="0dp"
-        app:contentInsetEnd="0dp"
-        app:popupTheme="@style/AppBar.Popup"
-        >
-        <EditText
-            android:id="@+id/appbar_edit_text"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/appbar_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:paddingStart="8dp"
-            android:paddingLeft="8dp"
-            android:paddingEnd="8dp"
-            android:paddingRight="8dp"
-            android:selectAllOnFocus="true"
-            android:maxLines="1"
-            android:inputType="textNoSuggestions"
-            android:imeOptions="actionSearch"
-            android:textColor="#000"
-            android:textColorHint="#aaaaaa"
-            android:hint="@string/appbar_search_edit_text_hint"
-            android:background="@drawable/appbar_background"
-            android:layout_gravity="center_vertical"/>
-    </android.support.v7.widget.Toolbar>
+            android:layout_height="?attr/actionBarSize"
+            android:focusableInTouchMode="true"
+            app:contentInsetStart="0dp"
+            app:contentInsetEnd="0dp"
+            app:popupTheme="@style/AppBar.Popup"
+            >
+            <EditText
+                android:id="@+id/appbar_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:paddingStart="8dp"
+                android:paddingLeft="8dp"
+                android:paddingEnd="8dp"
+                android:paddingRight="8dp"
+                android:selectAllOnFocus="true"
+                android:maxLines="1"
+                android:inputType="textNoSuggestions"
+                android:imeOptions="actionSearch"
+                android:textColor="#000"
+                android:textColorHint="#aaaaaa"
+                android:hint="@string/appbar_search_edit_text_hint"
+                android:background="@drawable/appbar_background"
+                android:layout_gravity="center_vertical"/>
+        </android.support.v7.widget.Toolbar>
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:indeterminate="false"
+            android:layout_gravity="bottom"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
+    </FrameLayout>
 </android.support.design.widget.AppBarLayout>
