Start with Omnibar menu items disabled, the presenter will enable items when they will be available during the session

--- a/app/src/main/res/menu/browser.xml
+++ b/app/src/main/res/menu/browser.xml
@@ -5,15 +5,18 @@
         android:id="@+id/action_go_back"
         android:title="@string/browser_menu_action_back"
         android:orderInCategory="100"
+        android:enabled="false"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_go_forward"
         android:title="@string/browser_menu_action_forward"
         android:orderInCategory="200"
+        android:enabled="false"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_refresh"
         android:title="@string/browser_menu_action_refresh"
         android:orderInCategory="300"
+        android:enabled="false"
         app:showAsAction="never"/>
 </menu>
