Add a simple tab switcher for UI purpose, add view holder, adapter and activity to show and display tabs

--- a/app/src/main/res/menu/browser.xml
+++ b/app/src/main/res/menu/browser.xml
@@ -19,4 +19,9 @@
         android:orderInCategory="300"
         android:enabled="false"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_tab_switcher"
+        android:title="@string/browser_menu_action_tab_switcher"
+        android:orderInCategory="400"
+        app:showAsAction="never"/>
 </menu>
