Add basic tab to browser:
Tabs are now saved in the onSaveInstanceState Bundle to keep the current session (each tab url and navigation history) after the process is killed. This won't persist the state when the app is swiped from the recent apps and rebooted.

--- a/app/src/main/res/layout/activity_tab_switcher.xml
+++ b/app/src/main/res/layout/activity_tab_switcher.xml
@@ -28,6 +28,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom">
             <Button
+                android:id="@+id/tab_switcher_remove_all_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/tab_switcher_remove_all_button"/>
+            <Button
                 android:id="@+id/tab_switcher_done_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
