--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -9,6 +9,10 @@
     <include
         android:visibility="visible"
         layout="@layout/appbar"/>
+<!--
+    <include
+        layout="@layout/tab"/>
+        -->
 
     <include
         layout="@layout/browser"/>
