--- a/app/src/main/res/layout/viewholder_tab.xml
+++ b/app/src/main/res/layout/viewholder_tab.xml
@@ -3,6 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:background="?attr/selectableItemBackground">
+    <ImageButton
+        android:id="@+id/tab_remove_image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_close_black_24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_gravity="end|center_vertical"/>
     <TextView
         android:id="@+id/tab_title_text_view"
         android:layout_width="match_parent"
