Clean some code, Finish implementing tabs.
- Add id field to tab and use a Map to hold the WebView references in the BrowserFragment, to avoid any conflict with the position change (when adding or removing tabs)
- Make Tab constructor private and add a static creator function
- Add WebViewUtils to help pause/resume/destroy WebViews
- Improve TabSwitcherActivity results and all the extra action that the activity provides (delete all, delete each tab, create new tabs and select tabs)
- Remove unused params in the TabSwitcherAdapter interface
- Add ignore lint error for "MergeRootFrame" in browser.xml layout, since the layout is the container for the WebViews and included in the fragment_browser layout in an outer LinearlLayout. no merge happening in here
- Add ignore lint error for "Overdraw" in viewholder_tab.xml layout, since the background is "?attr/selectableItemBackground" and just draws a ripple when the RecyclerView item is selected, no overdraw happening in here
- Add missing contentDescription tag in ImageButton in TabSwitcherActivity layout
- Remove unused code and comments.

--- a/app/src/main/res/layout/viewholder_tab.xml
+++ b/app/src/main/res/layout/viewholder_tab.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="56dp"
-    android:background="?attr/selectableItemBackground">
+    android:background="?attr/selectableItemBackground"
+    tools:ignore="Overdraw">
     <ImageButton
         android:id="@+id/tab_remove_image_button"
         android:layout_width="wrap_content"
@@ -10,7 +12,8 @@
         android:src="@drawable/ic_close_black_24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_gravity="end|center_vertical"/>
+        android:layout_gravity="end|center_vertical"
+        android:contentDescription="@string/tab_switcher_tab_remove_content_description"/>
     <TextView
         android:id="@+id/tab_title_text_view"
         android:layout_width="match_parent"
