--- a/app/src/main/res/layout/activity_tab_switcher.xml
+++ b/app/src/main/res/layout/activity_tab_switcher.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,11 +17,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/tab_switcher_tabs_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/><!--
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ff0000"/>-->
+            android:layout_height="match_parent"/>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
