More work on tabs:
- Edit BrowserPresenter tests to handle the TabView
- Make the activity singleInstance, so we don't have only one instance when launching the app from ACTION_ASSIST / ACTION_VIEW / ACTION_WEB_SEARCH
- inject the TabManager into the BrowserPresenter
Slightly edit the TabSwitcherActivity UI, to use a Toolbar and put the "new tab" button on the bottom with the other buttons, remove the openSettings action from the presenter.
- Add getter/setters for the TabManager fields.
- Remove the removeAllTabs from the BrowserView and let the tab manager remove all the tabs and inform the view after the callback.

--- a/app/src/main/res/layout/activity_tab_switcher.xml
+++ b/app/src/main/res/layout/activity_tab_switcher.xml
@@ -6,11 +6,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.duckduckgo.mobile.android.duckduckgo.ui.tabswitcher.TabSwitcherActivity">
-    <Button
-        android:id="@+id/tab_switcher_new_tab_button"
+    <android.support.design.widget.AppBarLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/tab_switcher_new_tab_button"/>
+        android:theme="@style/AppBar">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/tab_switcher_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppBar.Popup"/>
+    </android.support.design.widget.AppBarLayout>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,6 +29,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom">
+            <Button
+                android:id="@+id/tab_switcher_new_tab_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:text="@string/tab_switcher_new_tab_button"/>
             <Button
                 android:id="@+id/tab_switcher_remove_all_button"
                 android:layout_width="wrap_content"
