--- a/app/src/main/res/layout/viewholder_tab.xml
+++ b/app/src/main/res/layout/viewholder_tab.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="wrap_content"
+    android:minHeight="56dp"
     android:background="?attr/selectableItemBackground"
     tools:ignore="Overdraw">
     <ImageButton
@@ -14,13 +15,23 @@
         android:layout_marginRight="16dp"
         android:layout_gravity="end|center_vertical"
         android:contentDescription="@string/tab_switcher_tab_remove_content_description"/>
-    <TextView
-        android:id="@+id/tab_title_text_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"/>
+        android:layout_marginRight="16dp"
+        android:layout_gravity="center_vertical">
+        <TextView
+            android:id="@+id/tab_title_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/tab_subtitle_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"/>
+    </LinearLayout>
 </FrameLayout>
