Add Bookmarks to browser
- Add save bookmarks item from browser menu and Dialog to prompt the bookmark to the user
- Create UI for bookmarks, activity with adapter with edit / delete / swipe to delete / drag item.
- Create a local storage for boomarks as a SharedPreferences file. create Entity to store the model
- Create a repository to handle all the action on the bookmark storage.
- Add tests for the BookmarksPresenter

--- a/app/src/main/res/menu/browser.xml
+++ b/app/src/main/res/menu/browser.xml
@@ -19,4 +19,14 @@
         android:orderInCategory="300"
         android:enabled="false"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_bookmarks"
+        android:title="@string/browser_menu_bookmarks"
+        android:orderInCategory="400"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_save_bookmark"
+        android:title="@string/browser_menu_save_bookmark"
+        android:orderInCategory="500"
+        app:showAsAction="never"/>
 </menu>
