Remove Lint warnings and error, and format code and clean imports, Save/Restore BookmarksActivity state.
- Suppress "Overdraw" warning in BookmarkViewHolder. the background is just of the view holder, not the screen.
- Add missing Content Description attributes.
- Add hint to the EditBookmarkDialogFragment name and url EditText.
- Add inputType to ur EditText in EditBookmarkDialogFragment.
- Save UI state in BookmarkActivity and restore it in the presenter after process is killed.

--- a/app/src/main/res/layout/dialog_edit_bookmark.xml
+++ b/app/src/main/res/layout/dialog_edit_bookmark.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <EditText
         android:id="@+id/dialog_edit_bookmark_name_edit_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:hint="@string/bookmark_dialog_name_hint" />
+
     <EditText
         android:id="@+id/dialog_edit_bookmark_url_edit_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="@string/bookmark_dialog_url_hint"
+        android:inputType="textUri" />
 </LinearLayout>
