--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,4 +3,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.duckduckgo.mobile.android.duckduckgo.ui.MainActivity"/>
+    tools:context="com.duckduckgo.mobile.android.duckduckgo.ui.main.MainActivity"/>
