Finalize tabs and fix a few bugs.
- Make main activity singleInstance
- Create an abstract BaseSharedPreferencesDataStore to handle shared pref stores
- Create SharedPreferencesTabRepository, store and son entity to handle tabs restoration when the app process is killed by the system (not by the user)
- Add the TabSwitcherFagment and View
- Split BrowserView in smaller interfaces (Omnibar / Browser / Main)
- Removed old BrowserSessionModel
- Improved BrowserPresenter to handle Tabs

--- a/app/src/main/res/menu/browser.xml
+++ b/app/src/main/res/menu/browser.xml
@@ -30,8 +30,8 @@
         android:orderInCategory="500"
         app:showAsAction="never"/>
     <item
-        android:id="@+id/action_create_new_tab"
-        android:title="Create new tab"
+        android:id="@+id/action_open_tab_switcher"
+        android:title="@string/browser_menu_open_tabswitcher"
         android:orderInCategory="600"
         app:showAsAction="never"/>
 </menu>
