--- a/app/src/main/res/layout/view_omnibar.xml
+++ b/app/src/main/res/layout/view_omnibar.xml
@@ -1,51 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:theme="@style/AppBar">
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="?attr/actionBarSize"
+        android:focusableInTouchMode="true"
+        android:background="@drawable/omnibar_background">
         <android.support.v7.widget.Toolbar
             android:id="@+id/omnibar_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:focusableInTouchMode="true"
-            app:contentInsetStart="0dp"
-            app:contentInsetEnd="0dp"
-            app:popupTheme="@style/AppBar.Popup"
-            >
-            <EditText
-                android:id="@+id/omnibar_edit_text"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:paddingStart="8dp"
-                android:paddingLeft="8dp"
-                android:paddingEnd="8dp"
-                android:paddingRight="8dp"
-                android:selectAllOnFocus="true"
-                android:maxLines="1"
-                android:inputType="textNoSuggestions"
-                android:imeOptions="actionSearch"
-                android:textColor="@color/appbar_text_color"
-                android:textColorHint="@color/appbar_text_hint"
-                android:hint="@string/appbar_search_edit_text_hint"
-                android:background="@drawable/appbar_background"
-                android:layout_gravity="center_vertical"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <android.support.v7.widget.AppCompatImageButton
+                    android:visibility="gone"
+                    android:id="@+id/omnibar_back_image_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:src="@drawable/ic_arrow_back_dark_24dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"/>
+                <EditText
+                    android:id="@+id/omnibar_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:selectAllOnFocus="true"
+                    android:maxLines="1"
+                    android:inputType="textNoSuggestions"
+                    android:imeOptions="actionSearch"
+                    android:textColor="@color/omnibar_text_color"
+                    android:textColorHint="@color/omnibar_text_hint"
+                    android:textSize="16sp"
+                    android:hint="@string/omnibar_search_edit_text_hint"
+                    android:background="@null"/>
+            </LinearLayout>
         </android.support.v7.widget.Toolbar>
         <ProgressBar
             android:visibility="gone"
             android:id="@+id/omnibar_progress_bar"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
+            android:layout_height="2dp"
             android:indeterminate="false"
             android:layout_gravity="bottom"
+            android:theme="@style/AppTheme.ProgressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
     </FrameLayout>
 </merge>
