--- a/app/src/main/res/menu/browser.xml
+++ b/app/src/main/res/menu/browser.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:id="@+id/group_menu">
         <item
@@ -42,5 +43,6 @@
         android:visible="false"
         android:title="@string/browser_menu_delete_text"
         android:icon="@drawable/ic_cancel_light_grey_24dp"
-        app:showAsAction="always"/>
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 </menu>
