Change base theme to use light ActionBar so we don't have any light text on light background

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
 
     <style name="AppTheme" parent="AppTheme.Base"/>
 
-    <style name="AppBar" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="AppBar" parent="@style/ThemeOverlay.AppCompat.ActionBar">
     </style>
     <style name="AppBar.Popup" parent="@style/ThemeOverlay.AppCompat.Light">
     </style>
