--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#f3f3f3</color>
-    <color name="colorPrimaryDark">#f3f3f3</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#de5833</color>
 
     <color name="omnibar_text_color">#333333</color>
