Improve tab switcher UI
- Improve tab switcher UI based on the latest iOS design on Zeplin.
- Enable delete TabViewHolder on swipe.
- Make a base abstract class for the ItemTouchHelper.Callback.
- Show Add favicon callback in the presenter from the WebChromeClient and show it in the TabViewHolder.
- Add method to change the status bar background color and light/dark text when opening / closing the tab switcher (since the setTheme method doesn't refresh the status bar).
- Add the favicon placeholder and the fire button drawable from the iOS assets, we will replace these with the proper drawable when we have a final design.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.duckduckgo.mobile.android.duckduckgo.ui.main.MainActivity"/>
+<!--android:fitsSystemWindows="true"-->
