--- a/app/src/main/res/layout/viewholder_tab.xml
+++ b/app/src/main/res/layout/viewholder_tab.xml
@@ -1,33 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:minHeight="56dp"
-    android:background="?attr/selectableItemBackground"
-    android:paddingStart="16dp"
-    android:paddingLeft="16dp"
-    android:paddingEnd="16dp"
-    android:paddingRight="16dp">
+    android:layout_width="match_parent"
+    android:layout_height="70dp"
+    android:background="@drawable/tab_background"
+    android:layout_marginStart="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp">
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/tab_favicon_image_view"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_gravity="start|center_vertical"
+        android:contentDescription="@string/content_description_tab_favicon_image_view"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="start|center_vertical"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp">
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp">
         <TextView
             android:id="@+id/tab_title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:ellipsize="end" />
+            android:ellipsize="end"
+            android:textColor="@color/tab_text_primary"
+            android:textSize="16sp"/>
         <TextView
             android:id="@+id/tab_url_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:ellipsize="end"/>
+            android:ellipsize="end"
+            android:textColor="@color/tab_text_secondary"
+            android:textSize="14sp"/>
     </LinearLayout>
     <ImageButton
+        android:visibility="gone"
         android:id="@+id/tab_delete_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
