--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,12 @@
     <color name="omnibar_text_hint">#999999</color>
     <color name="omnibar_progress_bar">#2da1e4</color>
 
+    <color name="tab_switcher_background">#555555</color>
+    <color name="tab_switcher_bottom_bar_background">#333333</color>
+    <color name="tab_switcher_bottom_bar_fire_background">#111111</color>
+    <color name="tab_switcher_bottom_bar_fire_button">#999999</color>
+
+    <color name="tab_text_primary">#333333</color>
+    <color name="tab_text_secondary">#999999</color>
+
 </resources>
