--- a/app/src/main/res/layout/fragment_tab_switcher.xml
+++ b/app/src/main/res/layout/fragment_tab_switcher.xml
@@ -18,13 +18,6 @@
             android:textColor="#ffffff"
             android:clickable="true"
             style="@style/TextAppearance.AppCompat.Title"/>
-
-        <android.support.v7.widget.Toolbar
-            android:visibility="gone"
-            android:id="@+id/tab_switcher_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/AppBar.Popup"/>
     </android.support.design.widget.AppBarLayout>
     <FrameLayout
         android:layout_width="match_parent"
@@ -33,7 +26,9 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/tab_switcher_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:paddingBottom="80dp"
+            android:clipToPadding="false"/>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
